# Hikvision-Addons

./: .pre-commit-config.yaml
.github/workflows/: python-tests.yml
hikvision-doorbell/: pyproject.toml  requirements.dev.txt  requirements.txt
hikvision-doorbell/docs/: DEVELOPMENT.md  docker.md
